@@ -1,11 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright (C) 2001-2016 Food and Agriculture Organization of the
+  ~ United Nations (FAO-UN), United Nations World Food Programme (WFP)
+  ~ and United Nations Environment Programme (UNEP)
+  ~
+  ~ This program is free software; you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation; either version 2 of the License, or (at
+  ~ your option) any later version.
+  ~
+  ~ This program is distributed in the hope that it will be useful, but
+  ~ WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+  ~ General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with this program; if not, write to the Free Software
+  ~ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA
+  ~
+  ~ Contact: Jeroen Ticheler - FAO - Viale delle Terme di Caracalla 2,
+  ~ Rome - Italy. email: geonetwork@osgeo.org
+  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.geonetwork-opensource</groupId>
   <artifactId>geonetwork</artifactId>
   <packaging>pom</packaging>
-  <version>3.0.4-SNAPSHOT</version>
+  <version>3.1.0-SNAPSHOT</version>
   <name>GeoNetwork opensource</name>
   <description>GeoNetwork opensource is a standards based, Free and
     Open Source catalog application to manage spatially referenced
@@ -28,35 +50,35 @@
       <post>geonetwork-users@lists.sourceforge.net</post>
       <subscribe>https://lists.sourceforge.net/lists/listinfo/geonetwork-users</subscribe>
       <unsubscribe>https://lists.sourceforge.net/lists/options/geonetwork-users</unsubscribe>
-      <archive>http://n2.nabble.com/GeoNetwork-users-f2013074.html</archive>
+      <archive>http://osgeo-org.1560.x6.nabble.com/GeoNetwork-users-f3860293.html</archive>
     </mailingList>
     <mailingList>
       <name>Utilisateurs (fr)</name>
       <post>geonetwork-users-fr@lists.sourceforge.net</post>
       <subscribe>https://lists.sourceforge.net/lists/listinfo/geonetwork-users-fr</subscribe>
       <unsubscribe>https://lists.sourceforge.net/lists/options/geonetwork-users-fr</unsubscribe>
-      <archive>http://n2.nabble.com/GeoNetwork-users-francophone-f3246912.html</archive>
+      <archive>http://osgeo-org.1560.x6.nabble.com/GeoNetwork-users-francophone-f3880536.html</archive>
     </mailingList>
     <mailingList>
       <name>Usuarios (es)</name>
       <post>geonetwork-usuarios-es@lists.sourceforge.net</post>
       <subscribe>https://lists.sourceforge.net/lists/listinfo/geonetwork-usuarios-es</subscribe>
       <unsubscribe>https://lists.sourceforge.net/lists/options/geonetwork-usuarios-es</unsubscribe>
-      <archive>http://n2.nabble.com/GeoNetwork-users-espa-ol-f3246989.html</archive>
+      <archive>http://osgeo-org.1560.x6.nabble.com/GeoNetwork-users-espa-ol-f3860136.html</archive>
     </mailingList>
     <mailingList>
       <name>Dev</name>
       <post>geonetwork-devel@lists.sourceforge.net</post>
       <subscribe>https://lists.sourceforge.net/lists/listinfo/geonetwork-devel</subscribe>
       <unsubscribe>https://lists.sourceforge.net/lists/options/geonetwork-devel</unsubscribe>
-      <archive>http://n2.nabble.com/GeoNetwork-developer-f2014756.html</archive>
+      <archive>http://osgeo-org.1560.x6.nabble.com/GeoNetwork-developer-f3874395.html</archive>
     </mailingList>
     <mailingList>
       <name>Commits</name>
       <post>geonetwork-commit@lists.sourceforge.net</post>
       <subscribe>https://lists.sourceforge.net/lists/listinfo/geonetwork-commit</subscribe>
       <unsubscribe>https://lists.sourceforge.net/lists/options/geonetwork-commit</unsubscribe>
-      <archive>http://n2.nabble.com/GeoNetwork-commit-f2020497.html</archive>
+      <archive>http://osgeo-org.1560.x6.nabble.com/GeoNetwork-commit-f3865040.html</archive>
     </mailingList>
   </mailingLists>
 
@@ -115,7 +137,7 @@
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>yuicompressor-maven-plugin</artifactId>
-          <version>0.9</version>
+          <version>1.5.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -191,65 +213,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
     <plugins>
-<!--      <plugin>
-          <groupId>org.codehaus.groovy.maven</groupId>
-          <artifactId>gmaven-plugin</artifactId>
-          <version>1.0</version>
-          <executions>
-              <execution>
-                  <id>Check memory settings</id>
-                  <goals>
-                      <goal>execute</goal>
-                  </goals>
-                  <phase>initialize</phase>
-                  <configuration>
-                      <source><![CDATA[
-                          def converters = [
-                                  "k": 1/10124,
-                                  "m": 1.0,
-                                  "g": 1024.0
-                          ]
-                          def parseInt = {value ->
-                              def intVal = Integer.parseInt(value.substring(0, value.length() - 1));
-                              def unit = value.substring(value.length() - 1).toLowerCase()
-                              def converter = converters[unit]
-                              if (converter == null) {
-                                  throw new AssertionError("unit: $unit is not a recognized unit.  One of k,m,g is required in : $value")
-                              }
-                              return intVal * converter
-                          }
-
-                          final String MAX_PREFIX = "-Xmx"
-                          final String PERMGEN_PREFIX = "-XX:MaxPermSize="
-                          def arguments = java.lang.management.ManagementFactory.getRuntimeMXBean().getInputArguments()
-                          def mx = -1;
-                          def permgen = -1;
-                          arguments.each{param ->
-                              if (param.startsWith(MAX_PREFIX)) {
-                                  mx = parseInt (param.substring(MAX_PREFIX.length()))
-                              } else if (param.startsWith(PERMGEN_PREFIX)) {
-                                  permgen = parseInt (param.substring(PERMGEN_PREFIX.length()))
-                              }
-                          }
-
-                          log.info("\n\tMax Heap Memory: "+mx+" MB\n\tMax PermGen Size: "+permgen+" MB")
-                          if (permgen < 0 || mx < 0) {
-                              def mavenOpts = "MAVEN_OPTS=\"${MAX_PREFIX}512M ${PERMGEN_PREFIX}256M\""
-                              def errorMsg = "\n\nIn order for the build to complete both the $MAX_PREFIX parameter and the "+
-                                      "$PERMGEN_PREFIX must be set.  The e2e tests require this because the start Geonetwork and run " +
-                                      "tests against it which takes a lot of memory.\n\nCmd/Powershell:"+
-                                      "\n\n\t \$Env:${mavenOpts}\n\nBash/SH:\n\n\texport ${mavenOpts}"
-                              log.error(errorMsg);
-                              throw new AssertionError(errorMsg);
-                          }
-                          ]]></source>
-                  </configuration>
-              </execution>
-          </executions>
-      </plugin>-->
-      <!--     Compilation.                                        -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -292,8 +256,7 @@
           <configuration>
             <home>${project.build.directory}/test-server</home>
             <properties>
-              <!-- Cargo VMARGS are not working. FIXME -->
-              <cargo.jvmargs>-Xms48m -Xmx512m -Xss2M -XX:MaxPermSize=128m</cargo.jvmargs>
+              <cargo.jvmargs>-Xms48m -Xmx512m -Xss2M</cargo.jvmargs>
               <cargo.servlet.port>8080</cargo.servlet.port>
             </properties>
             <deployables>
@@ -333,7 +296,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.18.1</version>
             <configuration>
-                <argLine>-Dfile.encoding=UTF-8  -Xmx512M -XX:MaxPermSize=256M</argLine>
+                <argLine>-Dfile.encoding=UTF-8 -Xmx512M</argLine>
                 <!--<rerunFailingTestsCount>5</rerunFailingTestsCount>-->
                 <runOrder>alphabetical</runOrder>
                 <redirectTestOutputToFile>true</redirectTestOutputToFile>
@@ -520,7 +483,7 @@
       <dependency>
         <groupId>commons-collections</groupId>
         <artifactId>commons-collections</artifactId>
-        <version>3.2.1</version>
+        <version>3.2.2</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -1155,6 +1118,12 @@
 
   <profiles>
     <profile>
+      <id>with-doc</id>
+      <modules>
+        <module>docs</module>
+      </modules>
+    </profile>
+    <profile>
       <id>all</id>
       <activation>
         <file>
@@ -1169,13 +1138,6 @@
         <module>web</module>
         <module>e2e-tests</module>
         <module>geoserver</module>
-      </modules>
-    </profile>
-    <!-- Python and Latex are required to build the documentation. -->
-    <profile>
-      <id>with-doc</id>
-      <modules>
-        <module>docs</module>
       </modules>
     </profile>
     <profile>
@@ -1198,8 +1160,8 @@
     <jetty.version>8.1.9.v20130131</jetty.version>
     <geotools.version>8.6</geotools.version>
     <lucene.version>4.9.0</lucene.version>
-    <spring.version>3.2.8.RELEASE</spring.version>
-    <spring.security.version>3.1.6.RELEASE</spring.security.version>
+    <spring.version>4.2.4.RELEASE</spring.version>
+    <spring.security.version>3.2.0.RELEASE</spring.security.version>
     <metrics.version>2.1.1</metrics.version>
     <maven.build.timestamp.format>yyyy-MM-dd'T'HH'\:'mm'\:'ssZ</maven.build.timestamp.format>
     <build.timestamp>${maven.build.timestamp}</build.timestamp>
